# capstone-ado-agent

./: .env.example  .gitignore  PROMPTS_FOR_ANTIGRAVITY.md  README.md  agents-cli-manifest.yaml  pyproject.toml
.agents/: CONTEXT.md
.agents/skills/ado-risk-briefing/: SKILL.md
app/: agent.py  config.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py
docs/: ARCHITECTURE.md
mcp_server/: ado_devops_mcp.py
security/: redaction.py
tests/: test_security.py
tests/integration/: test_agent.py  test_server_e2e.py
tests/unit/: test_config.py
